---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\nx y z\r\n"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/syntax_inputs/invalid_level_error.ged
---
gedcom::parse_error::invalid_level

  × GEDCOM file contains a syntax error
  ├─▶ Invalid non-numeric level 'x'
  ╰─▶ invalid digit found in string
